--- a/app/src/main/res/layout/film_item_layout.xml
+++ b/app/src/main/res/layout/film_item_layout.xml
@@ -34,5 +34,12 @@
             android:layout_marginLeft="10dp"
             android:layout_below="@+id/title"
             android:layout_marginTop="10dp" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_more_vert_black_24dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:id="@+id/btnPopupMenu"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
